--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^3.3.6",
     "bootswatch": "^3.3.6",
     "grunt": "^0.4.5",
+    "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-imagemin": "^1.0.0",
     "grunt-contrib-less": "^1.2.0",
     "grunt-contrib-watch": "^0.6.1",
