--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "imagemin-optipng": "^4.3.0",
     "imagemin-pngcrush": "^4.1.0",
     "imagemin-pngout": "^2.0.0",
+    "imagemin-pngquant": "^4.2.2",
     "imagemin-zopfli": "^4.2.0",
     "less-plugin-autoprefix": "^1.5.1",
     "less-plugin-clean-css": "^1.5.1"
