--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "bacisovi-tode-web",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "countdowner": "horaklukas/countdowner",
+    "query-string": "^3.0.1"
+  },
   "devDependencies": {
+    "babel-core": "^6.7.2",
+    "babel-loader": "^6.2.4",
     "bootstrap": "^3.3.6",
     "bootswatch": "^3.3.6",
     "grunt": "^0.4.5",
@@ -17,6 +22,7 @@
     "imagemin-pngquant": "^4.2.2",
     "imagemin-zopfli": "^4.2.0",
     "less-plugin-autoprefix": "^1.5.1",
-    "less-plugin-clean-css": "^1.5.1"
+    "less-plugin-clean-css": "^1.5.1",
+    "webpack": "^1.12.14"
   }
 }
