--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "babel-core": "^6.7.2",
     "babel-loader": "^6.2.4",
     "bootstrap": "^3.3.6",
-    "bootswatch": "^3.3.6",
+    "font-awesome": "^4.5.0",
     "grunt": "^0.4.5",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-imagemin": "^1.0.0",
